Add health check endpoint in backend. Fix build development in docker compose
